new file:   ../.vscode/settings.json 	modified:   ../CMakeLists.txt 	renamed:    .cmake/api/v1/reply/cache-v2-c94c9e7223be99933798.json -> .cmake/api/v1/reply/cache-v2-18e501773e8379f90d4b.json 	renamed:    .cmake/api/v1/reply/codemodel-v2-d7343a1daefd52fb992c.json -> .cmake/api/v1/reply/codemodel-v2-6aa4ecf7f8c3a2650090.json 	renamed:    .cmake/api/v1/reply/directory-.-d0094a50bb2071803777.json -> .cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json 	renamed:    .cmake/api/v1/reply/index-2022-03-17T16-32-37-0857.json -> .cmake/api/v1/reply/index-2022-03-17T17-05-00-0372.json 	renamed:    .cmake/api/v1/reply/target-IMAGE_Processing-5ee28dbbf34e2d4b605c.json -> .cmake/api/v1/reply/target-executable-Debug-3d8134a9d4e0e959e174.json 	modified:   .ninja_deps 	modified:   .ninja_log 	new file:   Blah.exe 	modified:   CMakeCache.txt 	new file:   CMakeFiles/Blah.dir/ImageProcessing.cpp.obj 	modified:   CMakeFiles/TargetDirectories.txt 	new file:   CMakeFiles/executable.dir/ImageProcessing.cpp.obj 	modified:   CMakeFiles/rules.ninja 	modified:   build.ninja 	modified:   cmake_install.cmake 	new file:   compile_commands.json 	new file:   executable.exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,22 @@
 cmake_minimum_required(VERSION 3.22.3)
 project(MyProject VERSION 1.0.0 )
 
-
+#[[
 add_executable(IMAGE_Processing ImageProcessing.cpp)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
+add_library(
+
+)
+]]
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+set(SOURCE_FILES main.cpp)
+
+add_executable(executable ImageProcessing.cpp)
+add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
+add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
+find_package(ImageMagick COMPONENTS Magick++)
+include_directories(${ImageMagick_INCLUDE_DIRS})
+target_link_libraries(executable ${ImageMagick_LIBRARIES})
